# tg-ws-proxy

./: .gitattributes  Cargo.toml  deploy_on_router.sh  deploy_singbox.ps1  deploy_singbox.sh  gemini-code-1784701966822.json  niderlandi.json  proxy_domains.txt  rc.local.snippet.sh  shvecia.json  singbox.json  singbox_local_test.json  start_proxy.sh  start_singbox.sh  update_tag.sh
.github/workflows/: deploy.yml  release.yml
old_tg_ws_proxy/: check_log.sh  deploy_on_router.sh  fix_firewall.sh  get_proxy_info.sh  patch_rclocal.sh  runet-best.srs  test_curl.sh  test_domains.sh  test_ws.py  tg_ws_proxy.py  update_tag.sh
rules/: russia-youtube.srs
src/: main.rs
