[package]
name        = "tg-ws-proxy"
version     = "0.1.0"
edition     = "2021"
description = "Lightweight Telegram MTProxy relay over TCP/WebSocket (aarch64-musl)"
authors     = ["your-name"]
license     = "MIT"

# --------------------------------------------------------------------------
# Binary optimizations — target < 2 MB stripped musl binary
# --------------------------------------------------------------------------
[profile.release]
opt-level     = "z"        # optimize for binary size
lto           = true       # link-time optimization (strips dead code)
codegen-units = 1          # single codegen unit → better LTO
panic         = "abort"    # no unwinding machinery (~50 KB saved)
strip         = true       # strip debug symbols
debug         = false

# --------------------------------------------------------------------------
# Dependencies — kept to absolute minimum
# --------------------------------------------------------------------------
[dependencies]
# Async runtime — only the features we actually use
tokio = { version = "1", default-features = false, features = [
    "net",        # TcpListener / TcpStream
    "io-util",    # copy_bidirectional
    "rt-multi-thread",
    "macros",
    "time",       # timeout
    "signal",     # graceful shutdown
] }

# Argument parsing — zero-alloc, no proc-macros
pico-args = "0.5"

# Hex decoding for --secret validation (tiny, no_std compatible)
hex = { version = "0.4", default-features = false, features = ["alloc"] }
futures-util = "0.3"

# Crypto & WebSocket dependencies for bypass proxy
aes = "0.8"
ctr = "0.9"
hmac = "0.12"
sha2 = "0.10"
getrandom = "0.2"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
tokio-rustls = "0.24"
webpki-roots = "0.25"
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }

# --------------------------------------------------------------------------
# Build metadata
# --------------------------------------------------------------------------
[package.metadata.cross.target.aarch64-unknown-linux-musl]
# Cross-compilation config — see build instructions in src/main.rs
image = "ghcr.io/cross-rs/aarch64-unknown-linux-musl:main"
